--- a/README
+++ b/README
@@ -9,7 +9,7 @@ To build the draft you need to have tools, all of which you will use before you 
 # https://github.com/Juniper/libslax/tree/master/doc/oxtradoc
 # https://tools.ietf.org/tools/idnits/
 
-Once you have installed these tools, go the drafts directory and type:
+Once you have installed these tools, go the draft directory and type the following. Note, there is a drafts directory (plural), which will be deprecated.
 
 % make
 
